# ChangeLog for media-sound/mangler
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/mangler/ChangeLog,v 1.15 2012/05/05 08:33:47 mgorny Exp $

  05 May 2012; Michał Górny <mgorny@gentoo.org> mangler-1.2.0.ebuild,
  mangler-1.2.1.ebuild, mangler-1.2.2.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  08 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> mangler-1.2.2.ebuild:
  x86 stable wrt bug #404051

  23 Feb 2012; Agostino Sarubbo <ago@gentoo.org> mangler-1.2.2.ebuild:
  Stable for amd64, wrt bug #404051

*mangler-1.2.2 (15 Nov 2011)

  15 Nov 2011; mthode <mthode@mthode.org> +mangler-1.2.2.ebuild:
  Version bump to 1.2.2

*mangler-1.2.1 (31 Oct 2010)

  31 Oct 2010; Samuli Suominen <ssuominen@gentoo.org> +mangler-1.2.1.ebuild:
  Version bump wrt #338196 by Matthew Thode.

  30 Jul 2010; Markos Chandras <hwoarang@gentoo.org> mangler-1.2.0.ebuild:
  Stable on amd64 wrt bug #329329

  23 Jul 2010; Christian Faulhammer <fauli@gentoo.org> mangler-1.2.0.ebuild:
  stable x86, bug 329329

*mangler-1.2.0 (16 Jun 2010)

  16 Jun 2010; <chainsaw@gentoo.org> +mangler-1.2.0.ebuild:
  Version bump, ebuild by Matthew Thode. Closes bug #324409.

*mangler-1.2.0_beta1 (24 May 2010)

  24 May 2010; <chainsaw@gentoo.org> +mangler-1.2.0_beta1.ebuild,
  metadata.xml:
  Version bump. Ebuild changes by Matthew Thode, closes bug #315167.

  29 Jan 2010; Ben de Groot <yngwin@gentoo.org> -mangler-1.0_rc4.ebuild,
  -mangler-1.0.0.ebuild, mangler-1.0.1.ebuild:
  Add librsvg dep, remove old.

*mangler-1.0.1 (05 Jan 2010)

  05 Jan 2010; Ben de Groot <yngwin@gentoo.org> +mangler-1.0.1.ebuild:
  Version bump

  02 Dec 2009; Ben de Groot <yngwin@gentoo.org> mangler-1.0.0.ebuild:
  Force the use of the newer upstream tarball, so we can drop the maintainer
  mode workaround.

*mangler-1.0.0 (02 Dec 2009)

  02 Dec 2009; Ben de Groot <yngwin@gentoo.org> -mangler-1.0_rc3.ebuild,
  +mangler-1.0.0.ebuild: