@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/mangler
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mangler/ChangeLog,v 1.15 2012/05/05 08:33:47 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mangler/ChangeLog,v 1.16 2012/06/16 20:19:34 prometheanfire Exp $
+
+*mangler-1.2.4 (16 Jun 2012)
+
+  16 Jun 2012; Matthew Thode <prometheanfire@gentoo.org> +mangler-1.2.4.ebuild,
+  -mangler-1.2.0.ebuild, metadata.xml:
+  added G15 fix from upstream
 
   05 May 2012; Michał Górny <mgorny@gentoo.org> mangler-1.2.0.ebuild,
   mangler-1.2.1.ebuild, mangler-1.2.2.ebuild:
